Bug 149680 - Hamburger menu in Tabbed Interface does not open in the correct position in kf5
Summary: Hamburger menu in Tabbed Interface does not open in the correct position in kf5
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.3.2.2 release
Hardware: All All
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.5.0 target:7.4.0.0.beta2 tar...
Keywords:
: 148617 (view as bug list)
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2022-06-22 17:55 UTC by Rafael Lima
Modified: 2023-07-21 13:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Video showing the problem (84.03 KB, video/mp4)
2022-06-22 17:55 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2022-06-22 17:55:33 UTC
Created attachment 180914 [details]
Video showing the problem

See attached video for more details about the problem.

The Tabbed UI offers a hamburger menu for each tab in the top-right corner. Clicking it should show a context menu with the available options.

However, using kf5, when you click it and move the mouse somewhere else, the menu will appear where the mouse is positioned instead of opening where the hamburger menu is.

I have tested under "gen" and "gtk3" and the context menu always opens where the hamburger menu is. The problem only happens with kf5.

System info

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: cb83063cc0eb4e93bd44bc0cb9b7c4841230cdef
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: threaded
Comment 1 Rafael Lima 2022-06-23 13:25:58 UTC
After a bit more testing I noticed that all context menus under kf5 have a similar behavior.

However, in KDE applications the hamburger menus and context menus always open in the position where the click happened.

So this should be a fix for all context menus in LibreOffice under kf5.
Comment 2 Michael Weghorn 2022-06-24 08:33:31 UTC
Pending potential fix: https://gerrit.libreoffice.org/c/core/+/136356
Comment 3 Commit Notification 2022-07-01 05:29:16 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ee3976f2c613f9015477ab327996c074e8516f9d

tdf#149680 qt: Open native popup menu at given position

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-07-01 13:07:00 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/fc5edcf8c02ce81715a3db7c58e9b6d4a9a3b796

tdf#149680 qt: Open native popup menu at given position

It will be available in 7.4.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Rafael Lima 2022-07-04 14:37:20 UTC
Verified with

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: d2dfc0c4286057f5d8dda178817de3503c3a7d29
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: threaded

Thanks Michael for the fix.
Comment 6 Commit Notification 2022-07-08 09:33:55 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/3f8c6e73bc23d3295ea97f204745cf1869272c66

tdf#149680 qt: Open native popup menu at given position

It will be available in 7.3.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Gabor Kelemen (Collabora) 2023-07-21 13:24:42 UTC
*** Bug 148617 has been marked as a duplicate of this bug. ***