tdf#149680 qt: Open native popup menu at given position

Calculate the position at which to open the popup
menu from the passed window and rectangle, rather
than always opening the native popup menu at the
cursor position.

The commit message in

    commit 1e0b16f8695498e4eea7c2208aabf7e7664ce749
    Date:   Wed Feb 12 08:07:42 2020 +0100

        tdf#128921 tdf#130341 tdf#122053 qt5: Native PopupMenus

which had implemented native poup menus, already said:

> For now, this always shows the popup menu at cursor position, which
> can be changed by taking the Rectangle passed to
> 'Qt5Menu::ShowNativePopupMenu' into account if there should be any
> need.

Change-Id: If1a44b6d53f3dcd6fa7ceec0738219f11cfc22c4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136356
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit ee3976f2c613f9015477ab327996c074e8516f9d)